src/edgeflow/parser/grammar/EdgeFlowParser.py
# Generated from grammer/EdgeFlow.g4 by ANTLR 4.13.1
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class EdgeFlowParser(Parser):
    grammarFileName = "EdgeFlow.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'='",
        "','",
        "'{'",
        "'}'",
        "'('",
        "')'",
        "'['",
        "']'",
        "':'",
        "'<'",
        "'>'",
        "'Conv2D'",
        "'Conv1D'",
        "'Dense'",
        "'MaxPool2D'",
        "'AvgPool2D'",
        "'Flatten'",
        "'Dropout'",
        "'BatchNorm'",
        "'LayerNorm'",
        "'Activation'",
        "'LSTM'",
        "'GRU'",
        "'Embedding'",
        "'Attention'",
        "'relu'",
        "'sigmoid'",
        "'tanh'",
        "'softmax'",
        "'leaky_relu'",
        "'swish'",
        "'gelu'",
        "'linear'",
        "'valid'",
        "'same'",
        "'model'",
        "'quantize'",
        "'target_device'",
        "'deploy_path'",
        "'input_stream'",
        "'buffer_size'",
        "'optimize_for'",
        "'memory_limit'",
        "'enable_fusion'",
        "'framework'",
        "'enable_hybrid_optimization'",
        "'pytorch_quantize'",
        "'dynamic_int8'",
        "'static_int8'",
        "'fine_tuning'",
        "'enable_pruning'",
        "'pruning_sparsity'",
        "'scheduling'",
        "'scheduling_params'",
        "'resource_constraints'",
        "'deployment_config'",
        "'pipeline_config'",
        "'cpu_limit'",
        "'power_limit'",
        "'latency_limit'",
        "'environment'",
        "'runtime'",
        "'deployment_mode'",
        "'streaming_mode'",
        "'batch_size'",
        "'parallel_workers'",
        "'pipeline'",
        "'target'",
        "'flags'",
        "'input'",
        "'output'",
        "'Tensor'",
        "<INVALID>",
        "'connect'",
        "'->'",
        "'*'",
        "'int8'",
        "'float16'",
        "'none'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "MODEL",
        "QUANTIZE",
        "TARGET_DEVICE",
        "DEPLOY_PATH",
        "INPUT_STREAM",
        "BUFFER_SIZE",
        "OPTIMIZE_FOR",
        "MEMORY_LIMIT",
        "FUSION",
        "FRAMEWORK",
        "HYBRID_OPTIMIZATION",
        "PYTORCH_QUANTIZE",
        "DYNAMIC_INT8",
        "STATIC_INT8",
        "FINE_TUNING",
        "PRUNING",
        "PRUNING_SPARSITY",
        "SCHEDULING",
        "SCHEDULING_PARAMS",
        "RESOURCE_CONSTRAINTS",
        "DEPLOYMENT_CONFIG",
        "PIPELINE_CONFIG",
        "CPU_LIMIT",
        "POWER_LIMIT",
        "LATENCY_LIMIT",
        "ENVIRONMENT",
        "RUNTIME",
        "DEPLOYMENT_MODE",
        "STREAMING_MODE",
        "BATCH_SIZE",
        "PARALLEL_WORKERS",
        "PIPELINE",
        "TARGET",
        "FLAGS",
        "INPUT",
        "OUTPUT",
        "TENSOR",
        "DTYPE",
        "CONNECT",
        "ARROW",
        "STAR",
        "INT8",
        "FLOAT16",
        "NONE",
        "BOOL",
        "POSITIVE_INT",
        "KERNEL_SIZE_INT",
        "STRIDE_INT",
        "POOL_SIZE_INT",
        "DROPOUT_RATE",
        "IDENTIFIER",
        "STRING",
        "INTEGER",
        "NUMBER",
        "COMMENT",
        "WS",
    ]

    RULE_program = 0
    RULE_statement = 1
    RULE_modelStmt = 2
    RULE_quantizeStmt = 3
    RULE_quantType = 4
    RULE_targetDeviceStmt = 5
    RULE_deployPathStmt = 6
    RULE_inputStreamStmt = 7
    RULE_bufferSizeStmt = 8
    RULE_optimizeForStmt = 9
    RULE_memoryLimitStmt = 10
    RULE_fusionStmt = 11
    RULE_frameworkStmt = 12
    RULE_hybridOptimizationStmt = 13
    RULE_pytorchQuantizeStmt = 14
    RULE_pytorchQuantType = 15
    RULE_fineTuningStmt = 16
    RULE_pruningStmt = 17
    RULE_pruningConfig = 18
    RULE_schedulingStmt = 19
    RULE_schedulingConfig = 20
    RULE_schedulingParamList = 21
    RULE_schedulingParam = 22
    RULE_resourceConstraintsStmt = 23
    RULE_constraintList = 24
    RULE_constraint = 25
    RULE_deploymentConfigStmt = 26
    RULE_deploymentParamList = 27
    RULE_deploymentParam = 28
    RULE_pipelineConfigStmt = 29
    RULE_pipelineParamList = 30
    RULE_pipelineParam = 31
    RULE_pipelineStmt = 32
    RULE_pipelineAttrList = 33
    RULE_pipelineAttr = 34
    RULE_pipelineBody = 35
    RULE_declInput = 36
    RULE_declOutput = 37
    RULE_tensorType = 38
    RULE_dimList = 39
    RULE_dim = 40
    RULE_layerDecl = 41
    RULE_layerType = 42
    RULE_argList = 43
    RULE_arg = 44
    RULE_argValue = 45
    RULE_constrainedNumber = 46
    RULE_positiveInt = 47
    RULE_kernelSize = 48
    RULE_strideValue = 49
    RULE_poolSize = 50
    RULE_dropoutRate = 51
    RULE_activationType = 52
    RULE_paddingType = 53
    RULE_valueList = 54
    RULE_connectionStmt = 55

    ruleNames = [
        "program",
        "statement",
        "modelStmt",
        "quantizeStmt",
        "quantType",
        "targetDeviceStmt",
        "deployPathStmt",
        "inputStreamStmt",
        "bufferSizeStmt",
        "optimizeForStmt",
        "memoryLimitStmt",
        "fusionStmt",
        "frameworkStmt",
        "hybridOptimizationStmt",
        "pytorchQuantizeStmt",
        "pytorchQuantType",
        "fineTuningStmt",
        "pruningStmt",
        "pruningConfig",
        "schedulingStmt",
        "schedulingConfig",
        "schedulingParamList",
        "schedulingParam",
        "resourceConstraintsStmt",
        "constraintList",
        "constraint",
        "deploymentConfigStmt",
        "deploymentParamList",
        "deploymentParam",
        "pipelineConfigStmt",
        "pipelineParamList",
        "pipelineParam",
        "pipelineStmt",
        "pipelineAttrList",
        "pipelineAttr",
        "pipelineBody",
        "declInput",
        "declOutput",
        "tensorType",
        "dimList",
        "dim",
        "layerDecl",
        "layerType",
        "argList",
        "arg",
        "argValue",
        "constrainedNumber",
        "positiveInt",
        "kernelSize",
        "strideValue",
        "poolSize",
        "dropoutRate",
        "activationType",
        "paddingType",
        "valueList",
        "connectionStmt",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    MODEL = 36
    QUANTIZE = 37
    TARGET_DEVICE = 38
    DEPLOY_PATH = 39
    INPUT_STREAM = 40
    BUFFER_SIZE = 41
    OPTIMIZE_FOR = 42
    MEMORY_LIMIT = 43
    FUSION = 44
    FRAMEWORK = 45
    HYBRID_OPTIMIZATION = 46
    PYTORCH_QUANTIZE = 47
    DYNAMIC_INT8 = 48
    STATIC_INT8 = 49
    FINE_TUNING = 50
    PRUNING = 51
    PRUNING_SPARSITY = 52
    SCHEDULING = 53
    SCHEDULING_PARAMS = 54
    RESOURCE_CONSTRAINTS = 55
    DEPLOYMENT_CONFIG = 56
    PIPELINE_CONFIG = 57
    CPU_LIMIT = 58
    POWER_LIMIT = 59
    LATENCY_LIMIT = 60
    ENVIRONMENT = 61
    RUNTIME = 62
    DEPLOYMENT_MODE = 63
    STREAMING_MODE = 64
    BATCH_SIZE = 65
    PARALLEL_WORKERS = 66
    PIPELINE = 67
    TARGET = 68
    FLAGS = 69
    INPUT = 70
    OUTPUT = 71
    TENSOR = 72
    DTYPE = 73
    CONNECT = 74
    ARROW = 75
    STAR = 76
    INT8 = 77
    FLOAT16 = 78
    NONE = 79
    BOOL = 80
    POSITIVE_INT = 81
    KERNEL_SIZE_INT = 82
    STRIDE_INT = 83
    POOL_SIZE_INT = 84
    DROPOUT_RATE = 85
    IDENTIFIER = 86
    STRING = 87
    INTEGER = 88
    NUMBER = 89
    COMMENT = 90
    WS = 91

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EdgeFlowParser.EOF, 0)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(EdgeFlowParser.StatementContext)
            else:
                return self.getTypedRuleContext(EdgeFlowParser.StatementContext, i)

        def getRuleIndex(self):
            return EdgeFlowParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

    def program(self):
        localctx = EdgeFlowParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.statement()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (
                    (
                        (((_la - 36)) & ~0x3F) == 0
                        and ((1 << (_la - 36)) & 2151337983) != 0
                    )
                ):
                    break

            self.state = 117
            self.match(EdgeFlowParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modelStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.ModelStmtContext, 0)

        def quantizeStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.QuantizeStmtContext, 0)

        def targetDeviceStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.TargetDeviceStmtContext, 0)

        def deployPathStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.DeployPathStmtContext, 0)

        def inputStreamStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.InputStreamStmtContext, 0)

        def bufferSizeStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.BufferSizeStmtContext, 0)

        def optimizeForStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.OptimizeForStmtContext, 0)

        def memoryLimitStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.MemoryLimitStmtContext, 0)

        def fusionStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.FusionStmtContext, 0)

        def frameworkStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.FrameworkStmtContext, 0)

        def hybridOptimizationStmt(self):
            return self.getTypedRuleContext(
                EdgeFlowParser.HybridOptimizationStmtContext, 0
            )

        def pytorchQuantizeStmt(self):
            return self.getTypedRuleContext(
                EdgeFlowParser.PytorchQuantizeStmtContext, 0
            )

        def fineTuningStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.FineTuningStmtContext, 0)

        def pruningStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.PruningStmtContext, 0)

        def schedulingStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.SchedulingStmtContext, 0)

        def resourceConstraintsStmt(self):
            return self.getTypedRuleContext(
                EdgeFlowParser.ResourceConstraintsStmtContext, 0
            )

        def deploymentConfigStmt(self):
            return self.getTypedRuleContext(
                EdgeFlowParser.DeploymentConfigStmtContext, 0
            )

        def pipelineConfigStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.PipelineConfigStmtContext, 0)

        def pipelineStmt(self):
            return self.getTypedRuleContext(EdgeFlowParser.PipelineStmtContext, 0)

        def getRuleIndex(self):
            return EdgeFlowParser.RULE_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)

    def statement(self):
        localctx = EdgeFlowParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.modelStmt()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.quantizeStmt()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.targetDeviceStmt()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.deployPathStmt()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.inputStreamStmt()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 6)
                self.state = 124
                self.bufferSizeStmt()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 7)
                self.state = 125
                self.optimizeForStmt()
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 8)
                self.state = 126
                self.memoryLimitStmt()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 9)
                self.state = 127
                self.fusionStmt()
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 10)
                self.state = 128
                self.frameworkStmt()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 11)
                self.state = 129
                self.hybridOptimizationStmt()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 12)
                self.state = 130
                self.pytorchQuantizeStmt()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 13)
                self.state = 131
                self.fineTuningStmt()
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 14)
                self.state = 132
                self.pruningStmt()
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 15)
                self.state = 133
                self.schedulingStmt()
                pass
            elif token in [55]:
                self.enterOuterAlt(localctx, 16)
                self.state = 134
                self.resourceConstraintsStmt()
                pass
            elif token in [56]:
                self.enterOuterAlt(localctx, 17)
                self.state = 135
                self.deploymentConfigStmt()
                pass
            elif token in [57]:
                self.enterOuterAlt(localctx, 18)
                self.state = 136
                self.pipelineConfigStmt()
                pass
            elif token in [67]:
                self.enterOuterAlt(localctx, 19)
                self.state = 137
                self.pipelineStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModelStmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(EdgeFlowParser.MODEL, 0)

        def STRING(self):
            return self.getToken(EdgeFlowParser.STRING, 0)

        def getRuleIndex(self):
            return EdgeFlowParser.RULE_modelStmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterModelStmt"):
                listener.enterModelStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitModelStmt"):
                listener.exitModelStmt(self)

    def modelStmt(self):
        localctx = EdgeFlowParser.ModelStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_modelStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(EdgeFlowParser.MODEL)
            self.state = 141
            self.match(EdgeFlowParser.T__0)
            self.state = 142
            self.match(EdgeFlowParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QuantizeStmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUANTIZE(self):
            return self.getToken(EdgeFlowParser.QUANTIZE, 0)

        def quantType(self):
            return self.getTypedRuleContext(EdgeFlowParser.QuantTypeContext, 0)

        def getRuleIndex(self):
            return EdgeFlowParser.RULE_quantizeStmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuantizeStmt"):
                listener.enterQuantizeStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuantizeStmt"):
                listener.exitQuantizeStmt(self)

    def quantizeStmt(self):
        localctx = EdgeFlowParser.QuantizeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_quantizeStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(EdgeFlowParser.QUANTIZE)
            self.state = 145
            self.match(EdgeFlowParser.T__0)
            self.state = 146
            self.quantType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QuantTypeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT8(self):
            return self.getToken(EdgeFlowParser.INT8, 0)

        def FLOAT16(self):
            return self.getToken(EdgeFlowParser.FLOAT16, 0)

        def NONE(self):
            return self.getToken(EdgeFlowParser.NONE, 0)

        def getRuleIndex(self):
            return EdgeFlowParser.RULE_quantType

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuantType"):
                listener.enterQuantType(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuantType"):
                listener.exitQuantType(self)

    def quantType(self):
        localctx = EdgeFlowParser.QuantTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_quantType)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not (((((_la - 77)) & ~0x3F) == 0 and ((1 << (_la - 77)) & 7) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TargetDeviceStmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TARGET_DEVICE(self):
            return self.getToken(EdgeFlowParser.TARGET_DEVICE, 0)

        def IDENTIFIER(self):
            return self.getToken(EdgeFlowParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return EdgeFlowParser.RULE_targetDeviceStmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTargetDeviceStmt"):
                listener.enterTargetDeviceStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTargetDeviceStmt"):
                listener.exitTargetDeviceStmt(self)

    def targetDeviceStmt(self):
        localctx = EdgeFlowParser.TargetDeviceStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_targetDeviceStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(EdgeFlowParser.TARGET_DEVICE)
            self.state = 151
            self.match(EdgeFlowParser.T__0)
            self.state = 152
            self.match(EdgeFlowParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeployPathStmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEPLOY_PATH(self):
            return self.getToken(EdgeFlowParser.DEPLOY_PATH, 0)

        def STRING(self):
            return self.getToken(EdgeFlowParser.STRING, 0)

        def getRuleIndex(self):
            return EdgeFlowParser.RULE_deployPathStmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeployPathStmt"):
                listener.enterDeployPathStmt(self)
